--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html{
     transition: all 0.3s ease;
 }
 .navbar.sticky{
-     background: #00804b;
+     background: #222183;
      padding: 15px 0;
 }
 .navbar .max-width{
@@ -37,7 +37,7 @@ html{
     font-weight: 500;
 }
 .navbar .logo a span{
-    color: #00804b;
+    color: #3480FA;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -55,7 +55,7 @@ html{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: #00804b;
+    color: #3480FA;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -86,21 +86,21 @@ html{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color:#00804b ;
+    color:#3480FA ;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: #00804b;
+    background: #222183;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid #00804b;
+    border: 2px solid #222183;
 }
 .home .home-content a:hover{
-    color: #00804b;
+    color: #222183;
     background: none;
 }
 
@@ -120,7 +120,7 @@ html{
     text-align: center;
     line-height: 50px;
     color: #fff;
-    background: #00804b;
+    background: #222183;
     border-radius: 6px;
     font-size: 30px;
     z-index: 9999;
@@ -165,7 +165,7 @@ section .title::after{
     left: 50%;
     font-size: 20px;
     background: #fff;
-    color: #00804b;
+    color: #222183;
     padding: 5px;
     transform: translateX(-50%);
 }
@@ -199,25 +199,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: #00804b;
+    color: #222183;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: #00804b;
+    background: #222183;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid #00804b;
+    border: 2px solid #222183;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: #00804b;
+    color: #222183;
     background: none;
 }
 .about .about-content .left img{
@@ -250,7 +250,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: #00804b;
+    background: #222183;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -260,7 +260,7 @@ section .title::after{
 }
 .services .serv-content .card ion-icon{
     font-size: 70px;
-    color: #00804b;
+    color: #222183;
 }
 .services .serv-content .card:hover ion-icon{
     color: #fff;
@@ -287,18 +287,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: #00804b;
+    background: #222183;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid #00804b;
+    border: 2px solid #222183;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: #00804b;
+    color: #222183;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -325,7 +325,7 @@ section .title::after{
     height: 100%;
     top: 0;
     left: 0;
-    background: #00804b;
+    background: #222183;
 }
 .skills .skills-content .right .html::before{
     width: 93%;
@@ -354,14 +354,14 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: #00804b;
+    background: #222183;
 }
 .teams .carousel .card img{
     width: 150px;
     height: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid #00804b;
+    border: 5px solid #222183;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -391,7 +391,7 @@ section .title::after{
     height: 14px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid #00804b!important;
+    border: 2px solid #222183!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -400,7 +400,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: #00804b!important;
+    background: #222183!important;
 }
 /*  sessão Contato  */
 .contact .title::after{
@@ -439,7 +439,7 @@ section .title::after{
 }
 .contact .contact-content .row ion-icon{
     font-size: 25px;
-    color: #00804b;
+    color: #222183;
 }
 .contact .rigth form .fields{
     display: flex;
@@ -482,8 +482,8 @@ section .title::after{
 .contact .rigth form .button button{
     width: 100%;
     height: 100%;
-    border: 2px solid #00804b;
-    background: #00804b;
+    border: 2px solid #222183;
+    background: #222183;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -492,7 +492,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .contact .rigth form .button button:hover{
-    color: #00804b;
+    color: #222183;
     background: none;
 }
 
@@ -504,7 +504,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: #00804b;
+    color: #3480FA;
     text-decoration: none;
 }
 footer span a:hover{
