--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ section .title::after{
     padding: 5px;
     transform: translateX(-50%);
 }
-.about, .services, .skills, .teams, .contact, footer{
+.about, .services, .skills, .project, .contact, footer{
     font-family: 'Roboto', sans-serif;
 }
 .about .about-content,
@@ -227,16 +227,16 @@ section .title::after{
     border-radius: 6px;
 }
 /*  sessão serviços */
-.services, .teams{
+.services, .project{
     background: #111;
     color: #fff;
 }
 .services .title::before,
-.teams .title::before{
+.project .title::before{
     background: #fff;
 }
 .services .title::after,
-.teams .title::after{
+.project .title::after{
     background: #111;
     content: "Que oferecemos";
 }
@@ -343,20 +343,20 @@ section .title::after{
     width: 42%;
 }
 /*  sessão equipe  */
-.teams .title::after{
+.project .title::after{
     content: "Especializada";
 }
-.teams .carousel .card{
+.project .carousel .card{
     background: #222;
     border-radius: 6px;
     padding: 25px 35px;
     text-align: center;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
+.project .carousel .card:hover{
     background: #222183;
 }
-.teams .carousel .card img{
+.project .carousel .card img{
     width: 150px;
     height: 150px;
     object-fit: cover;
@@ -364,20 +364,20 @@ section .title::after{
     border: 5px solid #222183;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
+.project .carousel .card:hover img{
     border-color: #fff;
 }
-.teams .carousel .card .box{
+.project .carousel .card .box{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover .box{
+.project .carousel .card:hover .box{
     transform: scale(1.05);
 }
-.teams .carousel .card .text{
+.project .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
