alterações perdidas recuperadas

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 html{
     scroll-behavior: smooth;
 }
+a { color: inherit; }
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -366,6 +367,7 @@ section .title::after{
     border-radius: 5%;
     border: 5px solid #222183;
     transition: all 0.3s ease;
+    
 }
 .project .carousel .card:hover img{
     border-color: #fff;
